--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="first_name">first name</string>
     <string name="second_name">second name</string>
     <string name="calculate">calculate</string>
+    <string name="get_started">Get Started</string>
+    <string name="history">history</string>
+    <string name="History">History</string>
+    <string name="his">Добавить в историю</string>
 </resources>
